Fixed long content stretching cards to ugly lengths

--- a/src/index.scss
+++ b/src/index.scss
@@ -90,3 +90,29 @@ input[type="checkbox"]:checked + span.ingredient-item {
   left: 2px;
   @apply bg-brand;
 }
+
+.line-clamp {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+}
+
+.line-clamp-1 {
+  -webkit-line-clamp: 1
+}
+
+.line-clamp-2 {
+  -webkit-line-clamp: 2
+}
+
+.line-clamp-3 {
+  -webkit-line-clamp: 3
+}
+
+.line-clamp-4 {
+  -webkit-line-clamp: 4
+}
+
+.line-clamp-5 {
+  -webkit-line-clamp: 5
+}
